[package]
name = "jinagam-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[build-dependencies]
embed-resource = "3"

[dependencies]
windows = { version = "0.58.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls_Dialogs",
    "Win32_UI_HiDpi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
